--- a/public/styles/mypage.scss
+++ b/public/styles/mypage.scss
@@ -138,10 +138,15 @@ section{
             margin-left: 25px;
             padding: 10px 20px;
             border-radius: 5px;
-            background: linear-gradient(0deg, #ccc 0%, #ccc 100%), #6269F5;
+            background: linear-gradient(0deg, #ccc 0%, #ccc 100%);
             box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.4);
             color: #444;
             font-size: 1.4rem;
+            cursor: pointer;
+          }
+          button:hover{
+            background: #6269F5;
+            color: #fff;
           }
         }
         .userdata-nickname, .userdata-phone{
@@ -158,7 +163,7 @@ section{
             color: #444;
             font-size: 1.4rem;
           }
-          .checkmsg{
+          .checkmsg-phone, .checkmsg-nick{
             color: #ff4444;
             font-size: 1.2rem;
             margin-left: 12px;
@@ -382,6 +387,7 @@ section{
           font-size: 1.2rem;
           margin-top: 5px;
           overflow-wrap: break-word;
+          color: #f44;
         }
       }
     }
@@ -394,6 +400,7 @@ section{
         width: 70px;
         padding: 10px 20px;
         border-radius: 5px;
+        cursor: pointer;
       }
       &>button:nth-of-type(1){
         background-color: #d9d9d9;
