feat: 경력, 회원정보 수정

--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -320,6 +320,11 @@ section {
   padding: 10px 20px;
   background: #d9d9d9;
   border-radius: 5px;
+  cursor: pointer;
+}
+.career-wrap .career-contents .career-content .btn-line button:hover {
+  background: #6269F5;
+  color: #fff;
 }
 .career-wrap .career-write {
   margin-top: 0px;
@@ -331,6 +336,11 @@ section {
 .career-wrap .career-write .career-content .btn-line button {
   color: #fff;
   background-color: #6269F5;
+  cursor: pointer;
+}
+.career-wrap .career-write .career-content .btn-line button:hover {
+  background: #6269F5;
+  color: #fff;
 }
 
 .modal-wrap {
