--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -172,6 +172,7 @@ input:-webkit-autofill:active {
   position: relative;
 }
 .ts-item-detail{
+  max-width: 165px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -320,6 +321,7 @@ input:-webkit-autofill:active {
   text-align: right;
 }
 .detail-top5-corp>p:nth-of-type(1){
+  overflow: hidden;
   font-size: 1.4rem;
   font-weight: 400;
 }
