--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -117,9 +117,10 @@ input:-webkit-autofill:active {
   display: block;
   height: 110px;
   position: relative;
-  border: 1px solid #aaaaaa;
-  border-radius: 5px;
-  padding: 30px 15px;
+  border-radius: 5px 60px 60px 60px;
+  background-color: #efefef;
+  box-shadow: 2px 4px 0px 0px #d9d9d9;
+  padding: 28px 48px;
 }
 .review>div{
   display: flex;
@@ -138,8 +139,8 @@ input:-webkit-autofill:active {
 }
 .review>button{
   position: absolute;
-  right: 14px;
-  top: 14px;
+  right: 48px;
+  top: 28px;
   font-size: 1.2rem;
   cursor: pointer;
 }
@@ -455,7 +456,6 @@ input:-webkit-autofill:active {
   }
   .review{
     height: 120px;
-    padding: 30px 20px;
   }
   .review>div{
     gap: 25px;
@@ -464,10 +464,6 @@ input:-webkit-autofill:active {
   .review>p{
     margin-top: 28px;
     font-size: 1.6rem;
-  }
-  .review>button{
-    right: 20px;
-    top: 14px;
   }
   .top-score-contents{
     flex-direction: row;
