--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -238,9 +238,10 @@ footer-component{
 .modal_addCorp>div{
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 20px;
   height: 30px;
-  background: #3D47FF;
+  background: #6269F5;
   border-radius: 5px 5px 0px 0px;
   font-size: 1.4rem;
   color: #ffffff;
@@ -291,27 +292,25 @@ footer-component{
 .btn_modalSubmit{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 20px;
   background: #eeeeee;
   border-radius: 0px 0px 5px 5px;
 }
-.modal_cancel{
-  width: 30%;
-  max-width: 180px;
-  height: 30px;
-  background: #ffffff;
-  border-radius: 5px;
-  font-size: 1.2rem;
+.modal_cancel>img{
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
 }
 .modal_submit{
   width: 30%;
   max-width: 180px;
   height: 30px;
-  background: #000dff;
+  background: #6269F5;
   border-radius: 5px;
   color: #ffffff;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 
 
