--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,264 +1,144 @@
 @charset "utf-8";
 
+.mo_none{
+  display: none;
+}
+
 /* header end */
 main{
-  position:relative;
   width:100%;
-  margin-top:60px;
+  margin-top: 120px;
 }
 .main_wrap{
   display: flex;
   justify-content: center;
   flex-wrap:wrap;
-  width:60%;
+  width:80%;
   margin:80px auto;
 }
 .login_wrap{
-  width:360px;
-  height:360px;
-  margin:0 auto;
-  border:1px solid rgb(51,51,51,0.3);
+  width: 100%;
+  max-width: 390px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 80px 28px;
+  border:1px solid #aaa;
   border-radius: 12px;
+  background-color: #eeefff;
 }
-/* .btn_login_tap_per{
-  width:50%;
-  height:60px;
-  line-height:60px;
-  font-size:2rem;
-  text-align:center;
-  border-radius:12px 0 0 0;
-  background:rgba(0, 13, 255, 0.1);
-  float:left;
-  cursor: pointer;
-}
-.btn_login_tap_cor{
-  width:50%;
-  height:60px;
-  line-height:60px;
-  font-size:2rem;
-  text-align:center;
-  border-radius:0 12px 0 0;
-  background:#fafafa;
-  float:right;
-  cursor: pointer;
-} */
 .login_box{
-  clear:both;
-  position:relative;
-  width:360px;
-  height:360px;
-  border-radius: 12px;
-  background:linear-gradient(180deg, rgba(0, 13, 255, 0.1),rgba(0, 163, 255,0.1));
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
-
 .login_input_wrap{
-  width:100%;
-  height:60%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
-.login_input_wrap form {
-  position:absolute;
-  top:60px; left:0;
-  width:100%;
-  padding:0 20px;
+#userid{
+  width: 100%;
+  padding: 16px 12px;
+  border-radius: 4px 4px 0px 0px;
+  border: 1px solid #aaa;
+  background-color: #fafafa;
+  font-size: 1.4rem;
 }
-.login_input_wrap form input{
-  position:relative;
-  width:70%;
-  height:40px;
-  padding:10px;
-  font-size:1.6rem;
-  border:none;
-  border:1px solid rgba(51,51,51,0.3);
-}
-.login_input_wrap form input:nth-of-type(1){
-  border-radius:4px 4px 0 0;
-}
-.login_input_wrap form input:nth-of-type(1):hover{
-  border:1px solid rgba(0, 13, 255, 0.5)
-}
-.login_input_wrap form input:nth-of-type(2){
-  border-radius:0 0 4px 4px;
-}
-.login_input_wrap form input:nth-of-type(2):hover{
-  border:1px solid rgba(0, 13, 255, 0.5)
+#userpw{
+  width: 100%;
+  padding: 16px 12px;
+  border-radius: 0px 0px 4px 4px;
+  border: 1px solid #aaa;
+  background-color: #fafafa;
+  font-size: 1.4rem;
 }
 .login_input_wrap form input::placeholder{
-  color:rgba(51,51,51,0.3)
-}
-.login_input_wrap form button{
-  position:absolute;
-  top:0; right:5%;
-  width:24%;
-  height:80px;
-  font-size:1.4rem;
-  border:none;
-  border-radius: 4px;
   color: #000;
-  background-color: rgba(51, 51, 51, 0.5);
+  font-size: 1.2rem;
+  font-family: NanumSquare_ac;
 }
-.summitbtn_on{
-  position:absolute;
-  top:0; right:5%;
-  width:24%;
-  height:80px;
-  font-size:1.4rem;
-  border:none;
-  border-radius: 4px;
-  background:url(./images/btn-bg.png) no-repeat center/cover;
-  color:#fff !important;
+.login_option{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 8px;
 }
-.login_input_wrap form input:last-of-type{
-  position:absolute;
-  top:84px;left:20px;
-  width:16px; height:16px;
+.save_id>input{
+  width: 14px;
+  height: 14px;
 }
-.login_input_wrap form label{
-  position:absolute;
-  top:84px;left:40px;
-  font-size:1.2rem;
+.save_id>label{
+  margin-left: 5px;
+  font-size: 1.2rem;
+  vertical-align: top;
 }
-.login_input_wrap p{
-  position:absolute;
-  top:144px;left:118px;
-  font-size:1.2rem;
+.login_option>button{
+  font-size: 1.2rem;
+  vertical-align: top;
+  font-weight: 400;
+  font-family: NanumSquare_ac;
 }
-
-.login_social_wrap{
-  position:relative;
-  width:90%;
-  margin:0 auto;
+#submit_user{
+  width: 100%;
+  padding: 14px 52px;
+  border-radius: 5px;
+  background-color: #6269f5;
+  color: #fafafa;
+  font-size: 1.4rem;
+  font-weight: 700;
+  font-family: NanumSquare_ac;
 }
-.login_social_wrap p{
-  font-size:1.6rem;
-  font-weight:300;
-  text-align:center;
+.to_signup{
+  margin: 0 auto;
+  font-size: 1.2rem;
 }
-.login_social_wrap ul{
-  width:80%;
-  margin:0 auto;
-  margin-top:20px;
-  display:flex;
-  justify-content: space-around;
+.to_signup>a{
+  margin-left: 16px;
+  font-weight: 700;
 }
-.login_social_wrap ul li{
-  width:36px; height:36px;
-  border-radius:50%;
-}
-.login_social_wrap ul li a{
-  display:block;
-  width:100%;
-  height:100%;
-  border-radius: 50%;
-}
-.login_social_wrap ul li:nth-of-type(1) a{
-  background:url(./images/btn_social_naver.png) no-repeat center/contain;
-}
-.login_social_wrap ul li:nth-of-type(2) a{
-  background:url(./images/btn_social_kakao.png) no-repeat center/contain;
-}
-.login_social_wrap ul li:nth-of-type(3) a{
-  background:url(./images/btn_social_google.png) no-repeat center/contain;
-}
-.login_social_wrap ul li:nth-of-type(4) a{
-  background:url(./images/btn_social_facebook.png) no-repeat center/contain;
-}
-.login_social_wrap ul li:nth-of-type(5) a{
-  background:url(./images/btn_social_apple.png) no-repeat center/contain;
-}
-
 .ad_wrap{
-  width:268px;
-  margin:0 auto;
-}
-.ad{
-  display:block;
-  width: 268px;;
-  height: 360px;
-  background:blue;
-}
-.btn_signup{
-  width:160px;
-  height:60px;
-  margin:10px auto;
-}
-.btn_signup a{
-  display:block;
-  width:100%;height:100%;
-  line-height:60px;
-  background:#fff;
-  border-radius:12px;
-  font-size:1.6rem;
-  font-weight:700;
-  text-align:center;
+  width:270px;
+  background-color: #aaa;
 }
 /* main end */
 
-footer{
-  position:relative;
-  width:100%;
+/* 테블릿 768 사이즈 반응형 */
+@media screen and (min-width: 768px) {
+  .login_box{
+    flex-direction: row;
+    gap: 8px;
+  }
+  .login_input_wrap{
+    width: calc(100% - 88px);
+  }
+  #submit_user{
+    width: 80px;
+    height: 100px;
+    padding: 20px;
+  }
 }
-.footer_wrap{
-  width:100%;
-  border-top:1px solid rgba(51,51,51,0.3);
-  padding:20px;
-}
-.footer_top{
-  width:100%;
-  margin:60px 0 40px;
-  border-bottom: 1px solid rgba(51, 51, 51, 0.3);
-  padding-bottom:40px;
-}
-.footer_top>div:first-child{
-  width:100%;
-  display:flex;
-}
-.footer_top h2{
-  font-size:2rem;
-  line-height:40px;
-}
-.footer_top>div:first-child ul{
-  width:max-content;
-  margin-left:40px;
-  display:flex;
-}
-.footer_top ul li{
-  width:fit-content;
-  height:40px;
-  line-height:40px;
-  margin-right:20px;
-}
-.footer_top ul li a{
-  display:block;
-  width:100%;
-  height:100%;
-  font-size:1.4rem;
-}
-.footer_sns{
-  width:max-content;
-  margin-top:20px;
-}
-.footer_sns ul{
-  display:flex;  
-}
-.footer_sns ul li a{
-  display:block;
-  width:36px; height:36px;
-  border-radius: 12px;
-}
-.footer_sns li:nth-of-type(1) a{
-  background:rgba(0, 13, 255, 0.3)
-}
-.footer_sns li:nth-of-type(2) a{
-  background:rgba(0, 13, 255, 0.3)
-}
-.footer_sns li:nth-of-type(3) a{
-  background:rgba(0, 13, 255, 0.3)
-}
-.footer_sns li:nth-of-type(4) a{
-  background:rgba(0, 13, 255, 0.3)
-}
-
-.footer_bottom{
-  width:100%;
-  font-size:1.2rem;
+/* PC 1024 사이즈 반응형 */
+@media screen and (min-width: 1024px){
+  .pc_show{
+    display: block;
+  }
+  .main_wrap{
+    gap: 50px;
+  }
+  #userid, #userpw, #submit_user{
+    font-size: 1.6rem;
+  }
+  .login_input_wrap{
+    width: calc(100% - 90px);
+  }
+  #submit_user{
+    width: 82px;
+  }
+  .login_input_wrap form input::placeholder{
+    font-size: 1.4rem;
+  }
+  .to_signup{
+    font-size: 1.4rem;
+  }
 }
