--- a/public/styles/review_search.scss
+++ b/public/styles/review_search.scss
@@ -195,10 +195,12 @@ button{
         gap: 5px;
       }
       button{
-        padding: 8px 8px;
+        padding: 4px 8px;
         font-size: 1.4rem;
-        border-radius: 5px;
+        border: 1px solid #aaa;
+        border-radius: 12px;
         color: #000;
+        background-color: #fff;
       }
       .hashtag-active{
         background-color: rgba(0, 13, 255, 0.6) !important;
@@ -332,6 +334,24 @@ button{
       }
     }
   }
+  .result-none-wrap{
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 120px;
+    margin-bottom: 120px;
+    &>img{
+      width: 210px;
+      height: 216px;
+    }
+    &>div{
+      margin-top: 40px;
+      font-size: 1.6rem;
+      &>button{
+        font-size: 1.6rem;
+        font-weight: 700;
+      }
+    }
+  }
   .page-wrap{
     width: 100%;
     margin: 0 auto;
@@ -345,12 +365,14 @@ button{
       background-size: contain;
       width: 7px;
       height: 14px;
+      cursor: pointer;
     }
     .next{
       background: url(images/ico_arrow_R.png) no-repeat;
       background-size: contain;
       width: 7px;
       height: 14px;
+      cursor: pointer;
     }
     .pages{
       display: flex;
@@ -541,6 +563,14 @@ button{
           a{
             font-size: 1.8rem;
           }
+        }
+      }
+    }
+    .result-none-wrap{
+      &>div{
+        font-size: 2.0rem;
+        &>button{
+          font-size: 2.0rem;
         }
       }
     }
