--- a/template/autoMail.ejs
+++ b/template/autoMail.ejs
@@ -1,6 +1,8 @@
 <html>
 <body>
   <div>
+    <h1 style='color:black'>NeedU 회원가입을 환영합니다.</h1>
+    <br>
     <p style='color:black'>회원 가입을 위한 인증번호 입니다.</p>
     <p style='color:black'>아래의 인증 번호를 입력하여 인증을 완료해주세요.</p>
     <h2><%= authCode %></h2>
