--- a/public/styles/review_detail.css
+++ b/public/styles/review_detail.css
@@ -33,6 +33,11 @@ main{
 	background-color: #fff;
 	box-shadow: inset 0px 1px 2px rgba(0,0,0,0.25);
 	border-radius: 5px;
+	padding: 12.5px 22.5px;
+}
+.corp_info_image>img {
+	width: 35px;
+	height: 55px;
 }
 .corp_info_data {
 	float: right;
@@ -85,6 +90,12 @@ main{
 	align-items: center;
 	gap: 12px;
 	width: 100%;
+}
+.hashtag_top>li{
+	padding: 4px 8px;
+	border-radius: 12px;
+	border: 1px solid #aaa;
+	background-color: #fff;
 }
 .btn_review {
 	width: 160px;
@@ -310,11 +321,14 @@ main{
 	margin-left: 5px;
 	margin-right: 5px;
 }
-.highlight>div>span:nth-of-type(1) {
-	background: url(./images/airplane.png) no-repeat;
+.highlight>div>span:nth-of-type(1){
+	width: fit-content;
+	vertical-align: top;
+}
+.work-status{
 	width: 16px;
 	height: 16px;
-	background-size: contain;
+	margin-right: 2px;
 }
 .highlight>div>span {
 	height: 16px;
@@ -420,6 +434,11 @@ main{
 	.corp_info_image {
 		width: 120px;
 		height: 120px;
+		padding: 19px 34px;
+	}
+	.corp_info_image>img {
+		width: 52px;
+		height: 82px;
 	}
 	.corp_info_data {
 		margin-left: 32px;
@@ -511,7 +530,7 @@ main{
 		margin-top: 16px;
 		gap: 4px;
 	}
-	.highlight>div>span:nth-of-type(1) {
+	.work-status{
 		width: 18px;
 		height: 18px;
 	}
