--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -28,13 +28,13 @@ header{
   line-height:1.6;
 }
 header>h1{
-  width:105px;
-  height:28px;
+  width:120px;
+  height:37px;
 }
 header>h1>a{
   display:block;
-  width:100%;
-  height:100%;
+  width:120px;
+  height:37px;
   background: url(images/logo_NeedU.png) no-repeat center/95%;
 }
 .nav_wrap{
@@ -335,9 +335,9 @@ nav{
 .gnb_wrap{
   margin:0;
   margin-right: 20px;
-  width:70%;
+  width:50%;
   display:flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   flex-flow: row-reverse;
 }
 .gnb_search{
@@ -361,7 +361,7 @@ nav{
 .usersign{
   margin:0;
   margin-left: 20px;
-  width: 25%;
+  width: fit-content;
   justify-content: space-around;
 }
 .usersign a{
@@ -439,10 +439,9 @@ footer-component{
 /* 768 end */
 /* 1024 */
 @media screen and (min-width:1024px) {
-.gnb_wrap{
+/* .gnb_wrap{
   width:75%;
-  /* border:1px solid red; */
-}
+} */
 .gnb_search{
   width:36%;
 }
@@ -456,14 +455,17 @@ footer-component{
   display: block;
   width: auto;
 }
+footer{
+  font-size: 1.4rem;
+}
 }
 @media screen and (min-width:1280px){
 header{
   width:67%;
 }
-.usersign{
+/* .usersign{
   width: 20%;
-}
+} */
 
 footer-component{
   width:67%;
