--- a/public/styles/review_detail.css
+++ b/public/styles/review_detail.css
@@ -103,7 +103,7 @@ main{
 	position: absolute;
 	right: 0;
 	bottom: -75px;
-	background-color: #3d47FF;
+	background-color: #2a2f9c;
 	border-radius: 8px;
 	font-size: 1.4rem;
 	text-align: center;
@@ -119,7 +119,7 @@ main{
 	bottom: 15%;
 	background: url(./images/btn_write_modal.png) no-repeat center;
 	background-size: 50%;
-	background-color: #3d47FF;
+	background-color: #2a2f9c;
 	border-radius: 60px;
 	cursor:pointer;
 	z-index: 9;
@@ -384,7 +384,7 @@ main{
 	gap: 4px;
 	width: fit-content;
 	height: 36px;
-	border: 1px solid #999fff;
+	border: 1px solid #A0A6FF;
 	border-radius: 5px;
 	cursor: pointer;
 }
