--- a/public/styles/404.css
+++ b/public/styles/404.css
@@ -26,7 +26,7 @@
 }
 .prev_page{
   font-size: 1.4rem;
-  font-weight: 700;
+  font-family: 'NanumSquareBold';
 }
 .main_page{
   font-size: 1.4rem;
