--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -161,6 +161,7 @@ input:-webkit-autofill:active {
   height: 120px;
   border-radius: 5px;
   padding: 25px 24px;
+  cursor: pointer;
 }
 .top-score-item>div:nth-child(1){
   width: 70px;
@@ -227,6 +228,7 @@ input:-webkit-autofill:active {
   padding: 20px 24px;
   overflow: hidden;
   margin-top: 20px;
+  cursor: pointer;
 }
 .top-score-banner>p:nth-child(1){
   font-size: 1.2rem;
@@ -333,6 +335,7 @@ input:-webkit-autofill:active {
   overflow: hidden;
   font-size: 1.4rem;
   font-weight: 400;
+  cursor: pointer;
 }
 .detail-top5-corp>p:nth-of-type(2){
   font-size: 1.0rem;
