--- a/public/styles/review_detail.css
+++ b/public/styles/review_detail.css
@@ -410,8 +410,7 @@ main{
 #more {
 	display: flex;
 	position: relative;
-	margin: 0 auto;
-	margin-bottom: 20px;
+	margin: 20px auto;
 	align-items: center;
 	justify-content: center;
 }
@@ -490,7 +489,7 @@ main{
 		font-size: 1.4rem;
 	}
 	.total_score_wrap ul {
-		gap:50px;
+		justify-content: space-between;
 	}
 	.total_detail_star span:nth-of-type(1) {
 		font-size: 1.8rem;
@@ -554,7 +553,7 @@ main{
 		bottom: 20px;
 	}
 	.total_score_wrap {
-		gap: 50px;
+		gap: 70px;
 	}
 	.contents_review {
 		gap: 76px;
