--- a/public/styles/review_search.css
+++ b/public/styles/review_search.css
@@ -11,6 +11,7 @@ section {
 
 button {
   cursor: pointer;
+  color: #000;
 }
 
 .search-section {
@@ -106,6 +107,9 @@ button {
   flex-wrap: wrap;
   gap: 10px;
   font-size: 1.2rem;
+}
+.search-section .filter .city div:nth-of-type(2) .sido-checked > span:nth-of-type(1) {
+  cursor: pointer;
 }
 .search-section .filter .score {
   display: flex;
