--- a/public/styles/signup.css
+++ b/public/styles/signup.css
@@ -36,7 +36,7 @@ form input {
   width: 100%;
   padding: 13px 12px;
   height: 48px;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   line-height: 24px;
   border: 1px solid #aaaaaa;
   border-radius: 4px;
@@ -71,7 +71,7 @@ form .item:nth-child(2) div {
 .req-btn, .confirm-btn {
   width: 40%;
   cursor: pointer;
-  font-size:1.8rem;
+  font-size: 1.4rem;
   background-color: #aaaaaa;
   border-radius: 4px;
 }
@@ -79,7 +79,7 @@ form .item:nth-child(2) div {
   display: none;
 }
 form .checkmsg {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin-top: 6px;
   margin-left: 6px;
   color: #FF4444;
@@ -103,14 +103,14 @@ form .checkmsg {
   border-bottom: 1px solid #aaaaaa;
 }
 .join_input_all input {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   background: #FAFAFA;
   border: 1px solid #aaaaaa;
   border-radius: 4px;
 }
 .join_input_all label {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   color: #444444;
   font-family: 'NanumSquareBold';
   line-height: 27px;
@@ -131,7 +131,7 @@ form .checkmsg {
   border-radius: 4px;
 }
 .join_input label {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   color: #444444;
   font-family: 'NanumSquareBold';
   margin-left: 8px;
@@ -145,7 +145,6 @@ form .checkmsg {
 }
 .join_input2 label {
   font-family: 'NanumSquareLight';
-  font-size: 1.6rem;
 }
 .join_radio {
   margin: 40px 0;
@@ -171,14 +170,14 @@ form .checkmsg {
 }
 .join_radio ul li label {
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 .btn_signup button {
   width: 100%;
   height: 65px;
   box-sizing: border-box;
   padding: 19px 28px;
-  font-size: 2rem;
+  font-size: 1.6rem;
   line-height: 24px;
   border: 1px solid #4876EF;
   border-color: #D7DCE5;
@@ -205,7 +204,7 @@ form .checkmsg {
   }
   form input {
     height: 60px;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
   form .item label {
     font-size: 1.8rem;
@@ -215,7 +214,10 @@ form .checkmsg {
     width: 120px;
   }
   form .checkmsg {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+  }
+  .req-btn, .confirm-btn {
+    font-size: 1.6rem;  
   }
   .join_agree {
     margin-top: 60px;
@@ -229,11 +231,11 @@ form .checkmsg {
     margin-left: 10px;
   }
   .join_input input {
-    width: 28px;
-    height: 28px;
+    width: 24px;
+    height: 24px;
   }
   .join_input label {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     margin-left: 10px;
   }
   .material-symbols-outlined {
@@ -247,10 +249,13 @@ form .checkmsg {
     margin-bottom: 24px;
   }
   .join_radio ul li input {
-    width: 28px;
-    height: 28px;
+    width: 24px;
+    height: 24px;
   }
   .join_radio ul li label {
+    font-size: 1.6rem;
+  }
+  .btn_signup button {
     font-size: 1.8rem;
   }
 }
