--- a/public/styles/review_search.scss
+++ b/public/styles/review_search.scss
@@ -98,6 +98,7 @@ button{
               button{
                 width: 60px;
                 color: #fff;
+                font-size: 1.2rem;
                 padding: 6px 12px;
                 border-radius: 3px;
               }
