--- a/public/styles/write_detail.css
+++ b/public/styles/write_detail.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 /* z-index: header10; button9 */
+button{
+	color: #000;
+	cursor: pointer;
+}
 
 main{
 	width: 100%;
@@ -31,6 +35,11 @@ main{
 	background-color: #fff;
 	box-shadow: inset 0px 1px 2px rgba(0,0,0,0.25);
 	border-radius: 5px;
+	padding: 12.5px 22.5px;
+}
+.corp_info_image>img {
+	width: 35px;
+	height: 55px;
 }
 .corp_info_data {
 	float: right;
@@ -277,6 +286,17 @@ main{
 	font-size: 1.3rem;
 	color: #aaaaaa;
 }
+.write_item input {
+	width: 100%;
+	padding: 17px 10px;
+	background: #ffffff;
+	border: 1px solid #aaaaaa;
+	border-radius: 5px;
+	font-size: 1.3rem;
+	line-height: 140%;
+	color: #000;
+	resize: none;
+}
 .write_item textarea {
 	width: 100%;
 	height: 160px;
@@ -289,7 +309,7 @@ main{
 	color: #000;
 	resize: none;
 }
-.write_item textarea::placeholder {
+.write_item textarea::placeholder, input::placeholder {
 	font-size: 1.3rem;
 	color: #aaaaaa;
 	white-space: normal;
@@ -324,6 +344,11 @@ main{
 	.corp_info_image {
 		width: 120px;
 		height: 120px;
+		padding: 19px 34px;
+	}
+	.corp_info_image>img {
+		width: 52px;
+		height: 82px;
 	}
 	.corp_info_data {
 		margin-left: 32px;
@@ -423,11 +448,15 @@ main{
 	.write_item span {
 		font-size: 1.4rem;
 	}
+	.write_item input {
+		padding: 17px 20px;
+		font-size: 1.8rem;
+	}
 	.write_item textarea {
 		padding: 17px 20px;
 		font-size: 1.8rem;
 	}
-	.write_item textarea::placeholder {
+	.write_item textarea::placeholder, input::placeholder {
 		font-size: 1.8rem;
 	}
 	.write_item:nth-of-type(1)>div {
