--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -351,36 +351,42 @@ section {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  padding: 80px 40px;
-  background-color: #fff;
   border-radius: 5px;
 }
-.modal-wrap > div:nth-child(1) {
-  font-size: 1.6rem;
+.modal-wrap .modal-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   font-weight: 700;
+  background-color: #6269F5;
+  border-radius: 5px 5px 0px 0px;
+  padding: 20px;
 }
-.modal-wrap > div:nth-child(2) {
-  margin-top: 10px;
+.modal-wrap .modal-header > span {
+  color: #fff;
+  font-size: 2rem;
 }
 .modal-wrap .change-pw {
-  margin-top: 40px;
+  padding: 80px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  background-color: #fff;
+}
+.modal-wrap .change-pw fieldset {
   padding: 40px 20px;
   display: flex;
   flex-direction: column;
-  gap: 60px;
-  background-color: #efefef;
-  border-radius: 5px;
-}
-.modal-wrap .change-pw fieldset {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 30px;
+  background-color: #efefef;
+  gap: 20px;
 }
 .modal-wrap .change-pw fieldset .pw-item {
+  width: 100%;
+  max-width: 250px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 15px;
 }
 .modal-wrap .change-pw fieldset .pw-item label {
@@ -388,6 +394,8 @@ section {
   padding-left: 12px;
 }
 .modal-wrap .change-pw fieldset .pw-item input {
+  width: 100%;
+  max-width: 250px;
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #fff;
@@ -400,23 +408,22 @@ section {
   overflow-wrap: break-word;
   color: #f44;
 }
-.modal-wrap .change-pw .submit-pw {
+.modal-wrap .submit-pw {
+  padding: 20px 28px;
+  background-color: #eee;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  gap: 20px;
 }
-.modal-wrap .change-pw .submit-pw button {
-  width: 70px;
-  padding: 10px 20px;
+.modal-wrap .submit-pw button {
+  width: 100%;
+  height: 54px;
+  max-width: 180px;
   border-radius: 5px;
+  background-color: #6269f5;
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: 700;
   cursor: pointer;
-}
-.modal-wrap .change-pw .submit-pw > button:nth-of-type(1) {
-  background-color: #d9d9d9;
-}
-.modal-wrap .change-pw .submit-pw > button:nth-of-type(2) {
-  background-color: #a0a6ff;
 }
 
 /* 테블릿 768 사이즈 반응형 */
@@ -498,21 +505,25 @@ section {
   .career-wrap .career-contents .career-content fieldset .career-period .period-wrap > div label {
     width: 50px;
   }
-  .modal-wrap {
-    padding: 80px 60px;
+  .modal-wrap .modal-header .modal_cancel {
+    height: auto;
   }
   .modal-wrap .change-pw {
-    padding: 40px;
+    padding: 80px 60px;
   }
   .modal-wrap .change-pw fieldset {
-    gap: 20px;
+    padding: 40px;
+    gap: 10px;
   }
   .modal-wrap .change-pw fieldset .pw-item {
     width: 100%;
+    max-width: none;
+    flex-direction: row;
     justify-content: center;
   }
   .modal-wrap .change-pw fieldset .pw-item label {
     width: 200px;
+    padding-left: 0;
   }
   .modal-wrap .change-pw fieldset .pw-item > div {
     flex-grow: 1;
@@ -520,6 +531,9 @@ section {
   }
   .modal-wrap .change-pw fieldset .pw-item > div input {
     width: 100%;
+  }
+  .modal-wrap .submit-pw {
+    justify-content: flex-end;
   }
 }
 /* 테블릿 1024 사이즈 반응형 */
@@ -602,6 +616,9 @@ section {
     max-width: 760px;
     margin: 0 auto;
   }
+  .modal-wrap .change-pw fieldset .pw-item {
+    justify-content: flex-start;
+  }
 }
 /* PC 1280 사이즈 반응형 */
 @media screen and (min-width: 1280px) {
@@ -623,12 +640,6 @@ section {
   }
   .career-wrap {
     padding: 40px 100px;
-  }
-  .modal-wrap {
-    padding: 80px;
-  }
-  .modal-wrap .change-pw fieldset .pw-item {
-    justify-content: flex-start;
   }
   .modal-wrap .change-pw fieldset .pw-item > div {
     max-width: none;
