--- a/public/styles/mypage.scss
+++ b/public/styles/mypage.scss
@@ -354,39 +354,47 @@ section{
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  padding: 80px 40px;
-  background-color: #fff;
   border-radius: 5px;
-  &>div:nth-child(1){
-    font-size: 1.6rem;
+  .modal-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     font-weight: 700;
-  }
-  &>div:nth-child(2){
-    margin-top: 10px;
+    background-color: #6269F5;
+    border-radius: 5px 5px 0px 0px;
+    padding: 20px;
+    &>span{
+      color: #fff;
+      font-size: 2.0rem;
+    }
   }
   .change-pw{
-    margin-top: 40px;
-    padding: 40px 20px;
+    padding: 80px 40px;
     display: flex;
     flex-direction: column;
-    gap: 60px;
-    background-color: #efefef;
-    border-radius: 5px;
+    justify-content: center;
+    gap: 20px;
+    background-color: #fff;
     fieldset{
+      padding: 40px 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 30px;
+      background-color: #efefef;
+      gap: 20px;
       .pw-item{
+        width: 100%;
+        max-width: 250px;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
         gap: 15px;
         label{
           width: 150px;
           padding-left: 12px;
         }
         input{
+          width: 100%;
+          max-width: 250px;
           padding: 10px 20px;
           border-radius: 5px;
           background-color: #fff;
@@ -401,24 +409,22 @@ section{
         }
       }
     }
-    .submit-pw{
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      gap: 20px;
-      button{
-        width: 70px;
-        padding: 10px 20px;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      &>button:nth-of-type(1){
-        background-color: #d9d9d9;
-      }
-      &>button:nth-of-type(2){
-        background-color: #a0a6ff;
-      }
-
+  }
+  .submit-pw{
+    padding: 20px 28px;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    button{
+      width: 100%;
+      height: 54px;
+      max-width: 180px;
+      border-radius: 5px;
+      background-color: #6269f5;
+      color: #fff;
+      font-size: 1.8rem;
+      font-weight: 700;
+      cursor: pointer;
     }
   }
 }
@@ -515,16 +521,24 @@ section{
     }
   }
   .modal-wrap{
-    padding: 80px 60px;
+    .modal-header{
+      .modal_cancel{
+        height: auto;
+      }
+    }
     .change-pw{
-      padding: 40px;
+      padding: 80px 60px;
       fieldset{
-        gap: 20px;
+        padding: 40px;
+        gap: 10px;
         .pw-item{
           width: 100%;
+          max-width: none;
+          flex-direction: row;
           justify-content: center;
           label{
             width: 200px;
+            padding-left: 0;
           }
           &>div{
             flex-grow: 1;
@@ -535,6 +549,9 @@ section{
           }
         }
       }
+    }
+    .submit-pw{
+      justify-content: flex-end;
     }
   }
 }
@@ -649,6 +666,15 @@ section{
       }
     }
   }
+  .modal-wrap{
+    .change-pw{
+      fieldset{
+        .pw-item{
+          justify-content: flex-start;
+        }
+      }
+    }
+  }
 }
 
 /* PC 1280 사이즈 반응형 */
@@ -675,11 +701,9 @@ section{
     padding: 40px 100px;
   }
   .modal-wrap{
-    padding: 80px;
     .change-pw{
       fieldset{
         .pw-item{
-          justify-content: flex-start;
           &>div{
             max-width: none;
             display: flex;
