--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -91,6 +91,7 @@ main{
   color: #fafafa;
   font-size: 1.4rem;
   font-family: 'NanumSquareAcb';
+  cursor: pointer;
 }
 .to_signup{
   margin: 0 auto;
