--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -81,6 +81,7 @@ section {
 }
 .user-wrap .user-data .id-card img {
   width: 60px;
+  cursor: pointer;
 }
 .user-wrap .user-data .id-card .user-id {
   margin-top: 16px;
@@ -270,6 +271,33 @@ section {
   box-shadow: 0px 0px 2px 0px #aaa;
   color: #444;
 }
+.career-wrap .career-contents .career-content fieldset .career-item .career-corplist {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.career-wrap .career-contents .career-content fieldset .career-item .career-corplist ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+.career-wrap .career-contents .career-content fieldset .career-item .career-corplist ul li button span {
+  font-size: 1.4rem;
+}
+.career-wrap .career-contents .career-content fieldset .career-item .career-corplist ul .active {
+  background-color: #ededed;
+}
+.career-wrap .career-contents .career-content fieldset .career-item .career-corplist .register {
+  padding: 20px;
+  font-size: 1.4rem;
+}
+.career-wrap .career-contents .career-content fieldset .career-item .career-corplist .register .btn_addCorp {
+  font-family: "NanumSquareBold";
+  cursor: pointer;
+}
 .career-wrap .career-contents .career-content fieldset .career-period .period-wrap {
   display: flex;
   flex-direction: row;
@@ -309,7 +337,7 @@ section {
   margin-top: 40px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 .career-wrap .career-contents .career-content .btn-line > a {
@@ -343,7 +371,17 @@ section {
   color: #fff;
 }
 
-.modal-wrap {
+.pw-modal-box {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 11;
+}
+.pw-modal-box .pw-modal-wrap {
   position: fixed;
   width: 80%;
   height: auto;
@@ -353,7 +391,7 @@ section {
   transform: translateX(-50%) translateY(-50%);
   border-radius: 5px;
 }
-.modal-wrap .modal-header {
+.pw-modal-box .pw-modal-wrap .pw-modal-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -362,11 +400,16 @@ section {
   border-radius: 5px 5px 0px 0px;
   padding: 20px;
 }
-.modal-wrap .modal-header > span {
+.pw-modal-box .pw-modal-wrap .pw-modal-header > span {
   color: #fff;
   font-size: 2rem;
 }
-.modal-wrap .change-pw {
+.pw-modal-box .pw-modal-wrap .pw-modal-header .pw-modal_cancel > img {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.pw-modal-box .pw-modal-wrap .change-pw {
   padding: 80px 40px;
   display: flex;
   flex-direction: column;
@@ -374,7 +417,7 @@ section {
   gap: 20px;
   background-color: #fff;
 }
-.modal-wrap .change-pw fieldset {
+.pw-modal-box .pw-modal-wrap .change-pw fieldset {
   padding: 40px 20px;
   display: flex;
   flex-direction: column;
@@ -382,18 +425,18 @@ section {
   background-color: #efefef;
   gap: 20px;
 }
-.modal-wrap .change-pw fieldset .pw-item {
+.pw-modal-box .pw-modal-wrap .change-pw fieldset .pw-item {
   width: 100%;
   max-width: 250px;
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
-.modal-wrap .change-pw fieldset .pw-item label {
+.pw-modal-box .pw-modal-wrap .change-pw fieldset .pw-item label {
   width: 150px;
   padding-left: 12px;
 }
-.modal-wrap .change-pw fieldset .pw-item input {
+.pw-modal-box .pw-modal-wrap .change-pw fieldset .pw-item input {
   width: 100%;
   max-width: 250px;
   padding: 10px 20px;
@@ -401,20 +444,20 @@ section {
   background-color: #fff;
   box-shadow: 0px 0px 2px 0px #6269F5;
 }
-.modal-wrap .change-pw fieldset .pw-item > div > div {
+.pw-modal-box .pw-modal-wrap .change-pw fieldset .pw-item > div > div {
   padding: 0 12px;
   font-size: 1.2rem;
   margin-top: 5px;
   overflow-wrap: break-word;
   color: #f44;
 }
-.modal-wrap .submit-pw {
+.pw-modal-box .pw-modal-wrap .submit-pw {
   padding: 20px 28px;
   background-color: #eee;
   display: flex;
   justify-content: center;
 }
-.modal-wrap .submit-pw button {
+.pw-modal-box .pw-modal-wrap .submit-pw button {
   width: 100%;
   height: 54px;
   max-width: 180px;
@@ -615,6 +658,12 @@ section {
   .career-wrap .career-contents .career-content {
     max-width: 760px;
     margin: 0 auto;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-item .career-corplist ul li button span {
+    font-size: 1.6rem;
+  }
+  .career-wrap .career-contents .career-content fieldset .career-item .career-corplist .register {
+    font-size: 1.6rem;
   }
   .modal-wrap .change-pw fieldset .pw-item {
     justify-content: flex-start;
