--- a/public/styles/mypage.scss
+++ b/public/styles/mypage.scss
@@ -72,6 +72,7 @@ section{
       background-color: #efefef;
       img{
         width: 60px;
+        cursor: pointer;
       }
       .user-id{
         margin-top: 16px;
@@ -258,6 +259,37 @@ section{
             box-shadow: 0px 0px 2px 0px #aaa;
             color: #444;            
           }
+          .career-corplist{
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            background-color: #fff;
+            border-radius: 5px;
+            ul{
+              display: flex;
+              flex-direction: column;
+              gap: 20px;
+              padding: 20px;
+              li{
+                button{
+                  span{
+                    font-size: 1.4rem;
+                  }
+                }
+              }
+              .active{
+                background-color: #ededed;
+              }
+            }
+            .register{
+              padding: 20px;
+              font-size: 1.4rem;
+              .btn_addCorp{
+                font-family: 'NanumSquareBold';
+                cursor: pointer;
+              }
+            }
+          }
         }
         .career-period{
           .period-wrap{
@@ -301,7 +333,7 @@ section{
         margin-top: 40px;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-end;
         align-items: center;
         &>a{
           color: #6269F5;
@@ -346,88 +378,106 @@ section{
   }
 }
 
-.modal-wrap{
-  position: fixed;
-  width: 80%;
-  height: auto;
-  max-width: 1120px;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  border-radius: 5px;
-  .modal-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-weight: 700;
-    background-color: #6269F5;
-    border-radius: 5px 5px 0px 0px;
-    padding: 20px;
-    &>span{
-      color: #fff;
-      font-size: 2.0rem;
+// 비밀번호 변경 모달
+.pw-modal-box{
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.2);
+  z-index: 11;
+  .pw-modal-wrap{
+    position: fixed;
+    width: 80%;
+    height: auto;
+    max-width: 1120px;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    border-radius: 5px;
+    .pw-modal-header{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      font-weight: 700;
+      background-color: #6269F5;
+      border-radius: 5px 5px 0px 0px;
+      padding: 20px;
+      &>span{
+        color: #fff;
+        font-size: 2.0rem;
+      }
+      .pw-modal_cancel>img{
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+      }
     }
-  }
-  .change-pw{
-    padding: 80px 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    background-color: #fff;
-    fieldset{
-      padding: 40px 20px;
+    .change-pw{
+      padding: 80px 40px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      background-color: #efefef;
+      justify-content: center;
       gap: 20px;
-      .pw-item{
-        width: 100%;
-        max-width: 250px;
+      background-color: #fff;
+      fieldset{
+        padding: 40px 20px;
         display: flex;
         flex-direction: column;
-        gap: 15px;
-        label{
-          width: 150px;
-          padding-left: 12px;
-        }
-        input{
+        align-items: center;
+        background-color: #efefef;
+        gap: 20px;
+        .pw-item{
           width: 100%;
           max-width: 250px;
-          padding: 10px 20px;
-          border-radius: 5px;
-          background-color: #fff;
-          box-shadow: 0px 0px 2px 0px #6269F5;
-        }
-        &>div>div{
-          padding: 0 12px;
-          font-size: 1.2rem;
-          margin-top: 5px;
-          overflow-wrap: break-word;
-          color: #f44;
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          label{
+            width: 150px;
+            padding-left: 12px;
+          }
+          input{
+            width: 100%;
+            max-width: 250px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            background-color: #fff;
+            box-shadow: 0px 0px 2px 0px #6269F5;
+          }
+          &>div>div{
+            padding: 0 12px;
+            font-size: 1.2rem;
+            margin-top: 5px;
+            overflow-wrap: break-word;
+            color: #f44;
+          }
         }
       }
     }
-  }
-  .submit-pw{
-    padding: 20px 28px;
-    background-color: #eee;
-    display: flex;
-    justify-content: center;
-    button{
-      width: 100%;
-      height: 54px;
-      max-width: 180px;
-      border-radius: 5px;
-      background-color: #6269f5;
-      color: #fff;
-      font-size: 1.8rem;
-      font-weight: 700;
-      cursor: pointer;
+    .submit-pw{
+      padding: 20px 28px;
+      background-color: #eee;
+      display: flex;
+      justify-content: center;
+      button{
+        width: 100%;
+        height: 54px;
+        max-width: 180px;
+        border-radius: 5px;
+        background-color: #6269f5;
+        color: #fff;
+        font-size: 1.8rem;
+        font-weight: 700;
+        cursor: pointer;
+      }
     }
   }
 }
+
+
 
 /* 테블릿 768 사이즈 반응형 */
 @media screen and (min-width: 768px) {
@@ -663,6 +713,24 @@ section{
       .career-content{
         max-width: 760px;
         margin: 0 auto;
+        fieldset{
+          .career-item{
+            .career-corplist{
+              ul{
+                li{
+                  button{
+                    span{
+                      font-size: 1.6rem;
+                    }
+                  }
+                }
+              }
+              .register{
+                font-size: 1.6rem;
+              }
+            }
+          }
+        }
       }
     }
   }
