--- a/public/styles/review_search.scss
+++ b/public/styles/review_search.scss
@@ -266,7 +266,7 @@ button{
       border: 1px solid #aaa;
       border-radius: 3px;
       padding: 6px 8px;
-      color: #aaa;
+      color: #444;
       font-size: 1.4rem;
     }
   }
@@ -279,6 +279,7 @@ button{
       padding: 28px 40px;
       gap: 20px;
       border-bottom: 1px solid #aaa;
+      cursor: pointer;
       .corp-img{
         padding: 20px 10px;
         width: 80px;
