--- a/public/styles/webcomponent.css
+++ b/public/styles/webcomponent.css
@@ -178,13 +178,22 @@ footer-component{
 .footer_main{
   display: flex;
   align-items: end;
+  flex-wrap: wrap;
   height: auto;
   padding: 20px 0 ;
   gap: 20px;
-  margin-bottom: 20px;
   border-bottom: 1px solid rgba(0, 13, 255, 0.1);
 }
-.logo{
+.footer_contact{
+  display: flex;
+  align-items: end;
+  flex-wrap: wrap;
+  height: auto;
+  gap: 20px;
+  padding: 20px 0 ;
+  margin-left: 10px;
+}
+.footer_logo{
   width: 70px;
   height: 20px;
   background: url(images/logo_NeedU.png) no-repeat center/95%;;
@@ -374,9 +383,9 @@ nav{
 .signup::before{
   display:none;
 }
-.nickname::before{
+/* .nickname::before{
   display:none;
-}
+} */
 .nickname{
   width: auto;
 }
@@ -392,8 +401,12 @@ nav{
 
 footer-component{
   width:86%;
+  flex-direction: row;
+  border-bottom: 1px solid rgba(0, 13, 255, 0.1);
 }
-
+.footer_main{
+  border-bottom: none;
+}
 .btn_toTop {
   right: calc(10% + 20px);
 }
