--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -339,6 +339,7 @@ section {
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  gap: 20px;
 }
 .career-wrap .career-contents .career-content .btn-line > a {
   color: #6269F5;
