--- a/public/styles/mypage.scss
+++ b/public/styles/mypage.scss
@@ -335,6 +335,7 @@ section{
         flex-direction: row;
         justify-content: flex-end;
         align-items: center;
+        gap: 20px;
         &>a{
           color: #6269F5;
           font-weight: 700;
