fix: mo input 확대방지 적용

--- a/public/styles/style_reset.css
+++ b/public/styles/style_reset.css
@@ -51,7 +51,7 @@ button{
   font-family: 'NanumSquare';
   color: #333333;
 }
-input{
+input, select{
   font-family: 'NanumSquare';
   color: #333333;
 }
