--- a/public/styles/mypage.css
+++ b/public/styles/mypage.css
@@ -171,7 +171,7 @@ section {
   padding: 10px 20px;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 0px 0px 2px 0px #aaa;
+  box-shadow: 0px 0px 2px 0px #000;
   color: #444;
   font-size: 1.4rem;
 }
