--- a/public/styles/style_reset.css
+++ b/public/styles/style_reset.css
@@ -67,6 +67,9 @@ input, select{
   display:block;
   clear:both;
 }
+#header_wrap{
+  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.10);
+}
 i{
   font-style: normal;
 }
