--- a/public/styles/review_search.scss
+++ b/public/styles/review_search.scss
@@ -119,6 +119,10 @@ button{
         font-size: 1.2rem;
         .sido-checked>span:nth-of-type(1){
           cursor: pointer;
+          &>img{
+            width: 10px;
+            height: 10px;
+          }
         }
       }
     }
